--- a/Assignment/css/site.css
+++ b/Assignment/css/site.css
@@ -13,7 +13,6 @@ button:hover {
 .menubar {
     width: 70vw;
     background-color: black;
-    
 }
 
 #menubutton {
@@ -24,7 +23,50 @@ button:hover {
     float: left;
     color: red;
 }
-.menubutton {
-    float: right;
-    color: blue;
+
+.apiButton{
+
 }
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    float:right;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  .show {display:block;}
