Setup and delivery now visible for end user.

--- a/Assignment/css/site.css
+++ b/Assignment/css/site.css
@@ -70,3 +70,11 @@ button:hover {
   .dropdown-content a:hover {background-color: #ddd}
   
   .show {display:block;}
+
+  #cardbodySetup {
+    color: red;
+  }
+
+  #cardbodyDelivery {
+    color: blue;
+  }
