--- a/Assignment/css/site.css
+++ b/Assignment/css/site.css
@@ -48,7 +48,7 @@ button:hover {
   .dropdown {
     position: relative;
     display: inline-block;
-    float:right;
+    float: right;
   }
   
   .dropdown-content {
@@ -78,3 +78,20 @@ button:hover {
   #cardbodyDelivery {
     color: blue;
   }
+
+  .button {
+    background-color: lightgrey;
+    border: 1px solid black;
+    color: black;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+  .button:hover {
+    background: linear-gradient(90deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.5) 75%, rgba(0,212,255,1) 100%);
+}
+
+  
