--- a/Assignment/css/site.css
+++ b/Assignment/css/site.css
@@ -1,32 +1,35 @@
 
 .mainbody {
-    border: 5px solid black;
-    height: 10vh;
-    width: 70vw;
-    margin: auto;
-    background: black;
+  border: none;
+  width: 70vw;
+  margin: auto;
 }
 
 button:hover {
-    background: linear-gradient(90deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.5) 75%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(90deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.5) 75%, rgba(0,212,255,1) 100%);
 }
 
 .menubar {
-    width: 70vw;
-    background-color: black;
+  width: 70vw;
+  background-color: black;
 }
 
 #menubutton {
-    float: right;
+  float: right;
 }
 
 .titletext {
-    float: left;
-    color: red;
+  float: left;
+  color: red;
 }
 
-.apiButton{
-
+.nav {
+  background-color: black;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -34,95 +37,114 @@ button:hover {
   }
   
 .dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    float: right;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd}
-  
-  .show {display:block;}
-
-  #cardbodySetup {
-    color: red;
-  }
-
-  #cardbodyDelivery {
-    color: blue;
-  }
-
-  .button {
-    background-color: lightgrey;
-    border: 1px solid black;
-    color: black;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-
-  .button:hover {
-    background: linear-gradient(90deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.5) 75%, rgba(0,212,255,1) 100%);
+  background-color: #000000;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
-.menubutton {
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #000000;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: right;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  display: block;
+  margin: 5px;
+  border-radius: 5px;
+  padding: 8px;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+
+.show {display:block;}
+
+#cardbodySetup {
+  color: red;
+}
+
+#cardbodyDelivery {
+  color: blue;
+}
+
+.button {
+  padding: 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.buttonPrimary{
   background-color: lightseagreen;
-    border: 1px solid black;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  color: white;
 }
+
+.buttonSecondary{
+  background-color: lightgrey;
+  border: 1px solid black;
+  color: black;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background: linear-gradient(90deg, rgba(2,0,36,0.8) 0%, rgba(9,9,121,0.5) 75%, rgba(0,212,255,1) 100%);
+}
+
 
 .header {
   align-self: center;
 }
 
 .card {
-    border: 1px solid black;
-    background-color: white;
-    text-align: left;
-    width: 70vw;
-  }
+  border: 1px solid black;
+  background-color: white;
+  text-align: left;
+  width: 70vw;
+  border-radius: 10px;
+}
 
 .cardheader{
   color: black;
+  border-bottom: 1px solid #a8a8a8;
+  background-color: #d3d3d3;
+  padding: 12px ;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.cardheader h2{
+  margin:0;
 }
 
 .cardbody{
-  background-color: white;
+  padding: 20px 10px;
+  border-bottom: 2px solid #a8a8a8;
+
+}
+
+.cardfooter{
+  padding: 10px;
+}
+
+.jokeBox{
+
 }
 
 
